--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -19,7 +19,7 @@ pipeline {
     stages {
         stage('Build') {
             steps {
-                sh 'mvn install clean package'
+                sh 'mvn install'
             }
         }
         stage('Test') {
