--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -42,7 +42,7 @@ pipeline {
         }
         stage('Deliver') {
             steps {
-                sh 'chmod +x./jenkins/scripts/deliver.sh'
+                sh 'chmod -x./jenkins/scripts/deliver.sh'
             }
         }
     }
