--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -42,7 +42,10 @@ pipeline {
         }
         stage('Deliver') {
             steps { 
-                sh './jenkins/scripts/deliver.sh'
+                 sh'''#!/bin/bash 
+                 ./jenkins/scripts/deliver.sh
+                 '''
+               
             }
         }
     }
