--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -43,7 +43,7 @@ pipeline {
         stage('Deliver') {
             steps { 
                  sh'''#!/bin/bash 
-                   chmod u+x ./jenkins/scripts/deliver.sh
+                    ./jenkins/scripts/deliver.sh
                 
                  '''
                
