--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -62,7 +62,7 @@ pipeline {
                               echo 'The following complex command behaves similarly to the previous one but'
                               echo 'extracts the value of the <version/> element within <project/> instead.'
                               set -x
-                              VERSION=`mvn help:evaluate -Dexpression=project.version | grep "^[\^\[]"`
+                              VERSION=`mvn help:evaluate -Dexpression=project.version | grep \"^[\^\[]"`
                               set +x
 
                               echo 'The following command runs and outputs the execution of your Java'
