--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -45,5 +45,12 @@ pipeline {
                  sh'docker build  -t my-java-app:${BUILD_NUMBER} .'
             }
          }
+          stage('docker image push') {
+             
+            steps {
+                 docker.withRegistry( 'https://index.docker.io/v1/',  DOCKERHUB_CREDENTIALS ) {
+                 my-java-app:${BUILD_NUMBER}.push()
+            }
+         }
     }
 }
