--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -49,7 +49,7 @@ pipeline {
              
             steps {
                  docker.withRegistry( 'https://index.docker.io/v1/',  DOCKERHUB_CREDENTIALS ) {
-                 my-java-app:${BUILD_NUMBER}.push()
+                 my-java-app*.push()
             }
          }
     }
