--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -48,10 +48,12 @@ pipeline {
           stage('docker image push') {
              
             steps {
+                 script {
                     docker.withRegistry( 'https://index.docker.io/v1/',  DOCKERHUB_CREDENTIALS ) {
                     my-java-app*.push()
             }
          }
     }
  }
+}
 }
