--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -43,9 +43,11 @@ pipeline {
           stage('docker image build/push') {
              
             steps {
+                 script{
                  
                     docker.withRegistry( 'https://index.docker.io/v1/',  DOCKERHUB_CREDENTIALS ) {
                     def app = docker.build("my-java-app:${BUILD_NUMBER}", '.').push()
+                    }           
            }
         }
      }
