--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -4,7 +4,7 @@ pipeline {
         
         
         environment {
-        bucket = "sam-jenkins-demo-us-west-2-rana-ziauddin"          //artifact deployment S3 bucket 
+        bucket = "sam-jenkins-demo-us-west-2-rana-ziauddin"          //artifact deployment S3 buckets 
         bucket1 = "sam-jenkins-demo-us-east-2-ranaziauddin"         //artifact upload s3 bucket 
         region = "us-east-1"                     //artifact deployment bucket region 
         region1 = "us-east-2"                    //artifact upload bucket region 
