--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -45,7 +45,7 @@ pipeline {
             steps {
                  script{
                  
-                    docker.withRegistry( 'https://hub.docker.com/',  DOCKERHUB_CREDENTIALS ) {
+                    docker.withRegistry( 'https://index.docker.io/v1/',  DOCKERHUB_CREDENTIALS ) {
                     def app = docker.build("my-java-app:${BUILD_NUMBER}", '.').push()
                     }           
            }
