--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -46,7 +46,7 @@ pipeline {
                  script{
                  
                     docker.withRegistry( 'https://index.docker.io/v1/',  DOCKERHUB_CREDENTIALS ) {
-                    def app = docker.build("my-java-app:${BUILD_NUMBER}", '.').push()
+                    def app = docker.build("rzdin/my-java-app:${BUILD_NUMBER}", '.').push()
                     }           
            }
         }
