--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -25,7 +25,7 @@ pipeline {
         stage('Build') {
              
             steps {
-                sh 'mvn -B -DskipTests clean package'
+                sh 'mvn -B -DskipTests clean package -Dv=${BUILD_NUMBER}'
             }
         }
         stage('Test') {
