--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -59,9 +59,12 @@ pipeline {
          stage('S3 Prod Env'){ //This stage deploy the artifacts from the copy build artifacts stage to se dployement bucket 
            
             steps{
+                 sh'''#!/bin/bash
+                    cp /target/my-app-1.0-${BUILD_NUMBER}-SNAPSHOT.jar .
+                 ''''
                    withAWS(credentials: "${aws_credential}", region: "${region}"){
                      
-                        s3Upload(file:"/target/my-app-1.0-${BUILD_NUMBER}-SNAPSHOT.jar", bucket:"${bucket}")
+                        s3Upload(file:"my-app-1.0-${BUILD_NUMBER}-SNAPSHOT.jar", bucket:"${bucket}")
         }
      }
   }            
